<resources>
    <string name="app_name">Quick Mart</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_login">Already a user? Log In</string>
    <string name="shop_smart_live_better">Shop Smart.Live Better.</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="not_yet_registered_create_account">Not yet Registered ? Create Account.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_review_here">Your Review here!</string>
    <string name="you_are_reviewing">You are reviewing</string>
    <string name="licences">Licences</string>
    <string name="your_cart_items">Your Cart Items</string>
    <string name="total">Total:</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="address">Address:</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="zip_code">Zip code:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="enter_your_contact">Enter your Contact</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="items">Items:</string>
    <string name="total_price">Total Price:</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="please_fill_all_the_blanks">Please Fill All The Blanks</string>
    <string name="see_all_categories">See All Categories</string>
    <string name="search_anything">Search anything</string>
    <string name="warning">Warning</string>
    <string name="submit_review">Submit Review</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="select_a_payment_method">Select a payment method:</string>
    <string name="checkout">Checkout</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="your_payment_successful">Your Payment Successful...</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="all_categories">All Categories</string>
    <string name="delete_item">Delete Item</string>
    <string name="popular_items">Popular Items</string>
    <string name="category">Category</string>
    <string name="suggested_items">Suggested Items</string>
    <string name="quick_mart">Quick Mart</string>
    <string name="user">User</string>
    <string name="search_for_items">Search for items...</string>
    <string name="search_for_groceries">Search for groceries...</string>
</resources>
