<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTxtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_your_address"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="12dp"
        android:lines="2"
        android:textColorHint="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/txtZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_code"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edtTxtZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/zip_code"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edtTxtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_your_contact"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_your_email"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="12dp"
        android:textColorHint="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/btnLinLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/back"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnNext"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:cornerRadius="30dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>
