<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/itemsLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txtItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="item names"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="price"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="address"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="phone number"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtPaymentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_payment_method"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/rgPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <RadioButton
            android:id="@+id/rbCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <RadioButton
            android:id="@+id/rbPayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/paypal"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

    </RadioGroup>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnCheckout"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/colorAccent"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
