<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/you_are_reviewing"
            android:textColor="@color/black"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/txtDescription"
            android:text="Item Name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edtTxtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_name"
        android:textSize="18sp"
        android:textColor="#333333"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        android:importantForAccessibility="yes" />

    <EditText
        android:id="@+id/edtTxtReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/your_review_here"
        android:textSize="18sp"
        android:lines="5"
        android:gravity="top|start"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        android:importantForAccessibility="yes" />

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/warning"
        android:textColor="#E91E63"
        android:visibility="gone"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnAddReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit_review"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:padding="12dp"
        android:importantForAccessibility="yes" />

</LinearLayout>
