<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbg"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/grey_border"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/grey_border"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/hintgrey"
                android:inputType="textPassword"
                android:padding="8dp" />

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/grey_border"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/hintgrey" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/already_a_user_login"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>