<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/loginbg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="420dp">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="375dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="text"
                    android:background="@drawable/grey_border"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:padding="8dp"
                    android:textColorHint="#2E7D32"
                    tools:ignore="TextFields,TextContrastCheck,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="375dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/grey_border"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColorHint="#2E7D32"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/log_in"
                    android:textSize="18sp"
                    app:cornerRadius="40dp" />

                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/not_yet_registered_create_account"
                    android:background="@drawable/grey_border"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>